css/style.css
body {
    font-family: 'Arial', Verdana, sans-serif;
    background-color: #000000;
    color: #ffffff;
    margin: 20px;
  }
  
  h1 {
    font-size: 42px;
    text-align: center;
    padding: 15px;
    color: #c4c4c4; /* Fix color contrast */
  }
  
  h2 {
    font-size: 30px;
    color: #0d0d0d;
  }
  
  p {
    font-size: 24px;
    padding: 10px 10px 10px 0;
    color: #c4c4c4; /* Fix color contrast */
  }
  
  img {
    width: 250px;
    display: block;
    margin: 0 auto;
    border: 10px dashed #ffffff;
  }
  
  div {
    min-height: 125px;
    padding: 20px;
    border: 3px solid #ffffff;
  }
  
  .introduction {
    border-radius: 15px;
    margin-top: 15px;
    line-height: 2;
  }
  
  .red {
    background-color: #ff0000;
    text-align: right;
    margin-left: 50px;
    border-bottom: 2px solid #ffffff;
    border-left: 5px solid #ffffff;
  }
  
  .blue {
    background-color: #0000ff;
    text-align: left;
    margin-right: 50px;
    border-right: 5px solid #ffffff;
    border-top: 2px solid #ffffff;
  }
  
  .yellow {
    background-color: #ffff00;
    text-align: right;
    margin-left: 50px;
    border-bottom: 2px solid #ffffff;
    border-left: 5px solid #ffffff;
  }
  
  .green {
    background-color: #00eb00; /* or #008500 or #00d800 */
    text-align: left;
    margin-right: 50px;
    border-right: 5px solid #ffffff;
    border-top: 2px solid #ffffff;
  }
  
  footer {
    background: linear-gradient(#000000, #0000ff 25%, #0066ff 70%, #000000);
    border: 5px solid #ffffff;
  }
  
  footer p {
    font-size: 20px;
    text-align: right;
    padding: 15px 15px 15px 0;
  }

